fix: api결과 안나오는 문제 해결중